make it compile (with maven) and work
.classpath maven.pomderived

TextAndMnemonicUtils <clinit>

"/resources/tree.txt" -> "/swingset/tree.txt"
"/resources/images/buttons/" -> "/swingset/images/buttons/"

- original SUN license text

TODO: DemoModule.loadSourceCode() verbessern